--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/knex": "^0.16.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.14",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "typescript": "^4.8.2"
   }
 }
